2003-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in
	* rsvg-styles.c (rsvg_real_parse_cssbuffer): removed the #warning
	here and instead output it when configure is run (bug #122119).

2003-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on Pango version 1.2.0 or newer.

	* rsvg-text.c (rsvg_text_handler_characters): don't use
	pango_ft2_get_context() which is deprecated in Pango HEAD, but
	create the Pango context from the fontmap instead (bug #122121).

	* rsvg-path.c (rsvg_parse_path_do_cmd): fixed storage of
	reflection point in Q command which caused the next T command to
	create a wrong stroke (bug #122118).

2003-09-11  Sven Neumann  <sven@gimp.org>

	* gimp-plugin/svg.c: Sprinkled the code with const qualifiers.
	Fixed transfer of pixel data from pixbuf to pixel region. The
	old code was wrong for pixbufs with rowstride != width * bpp.

== librsvg 2.4.0 ==

2003-09-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	version 2.4.0

2003-08-27  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: bug 120825
	
2003-06-20  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Add support for <title> and <desc> elements
	
2003-04-08  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: enable librsvg to be built w/o gtk+
	* Makefile.am: ditto
	
2003-04-08  Alex Duggan  <aldug@astrolinux.com>

	* configure.in: print out a summary displaying what
	parts of librsvg are to be built.

2003-04-08  Alex Duggan  <aldug@astrolinux.com>

	* doc/.cvsignore:
	* gimp-plugin/.cvsignore: create .cvsignore files for these
	two directories.
	
== librsvg 2.3.0 ==

2003-04-07  Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/Makefile.am: let load when building with croco
	* gdk-pixbuf-loader/Makefile.am: ditto
	
2003-04-03  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Fixes so that we link and build a DLL on Cygwin. 
	Adapted from work by Masahiro Sakai <s01397ms at sfc.keio.ac.jp>