@@ -281,32 +281,6 @@ AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
 
 dnl ===========================================================================
 
-LIBGIMP_CFLAGS=""
-LIBGIMP_LIBS=""
-rsvg_gimp=no
-
-test_gimp=true
-AC_ARG_WITH(gimp,[  --with-gimp  Build a gimp plugin],[
-	if test "x$withval" = "xno"; then
-		test_gimp=false
-	fi
-])
-if test "x$test_gimp" = "xtrue"; then
-	PKG_CHECK_MODULES(LIBGIMP,[gimp-1.3 >= 1.3.10 gimpui-1.3 >= 1.3.10], test_gimp=true, test_gimp=false)
-fi
-
-if test "x$test_gimp" = "xtrue"; then
-   rsvg_gimp=yes
-else
-	AC_MSG_WARN([Gimp plugin disbled, as requested (Use --with-gimp to enable)])
-fi
-AM_CONDITIONAL(ENABLE_GIMP_PLUGIN,[test $rsvg_gimp = yes])
-
-AC_SUBST(LIBGIMP_CFLAGS)
-AC_SUBST(LIBGIMP_LIBS)
-
-dnl ===========================================================================
-
 AC_OUTPUT([
 librsvg.spec
 librsvg-features.h
@@ -318,7 +292,6 @@ gtk-engine/examples/Makefile
 gtk-engine/examples/bubble/Makefile
 gtk-engine/examples/bubble/gtk-2.0/Makefile
 gdk-pixbuf-loader/Makefile
-gimp-plugin/Makefile
 ])
 
 dnl =============================================================================================
@@ -332,7 +305,6 @@ librsvg-$LIBRSVG_VERSION
 	Build theme engine:             ${enable_gtk_theme}
 	Handle svgz files:              ${test_gsf}
 	Use libcroco for css parsing:   ${test_croco}
-	Build gimp plugin:              ${test_gimp}
 "
 
 AC_MSG_RESULT([$croco_warning
